# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
csagedir = $(includedir)/csage
csage_HEADERS = \
    ccobject.h \
    convert.h \
    ginac_wrap.h \
    gmp_globals.h \
    gmp_or_mpir.h \
    gmpxx_or_mpirxx.h \
    interrupt.h \
    memory.h \
    mpn_pylong.h \
    mpz_longlong.h \
    mpz_pylong.h \
    ntl_wrap.h \
    pb_wrap.h \
    stdsage.h \
    ZZ_pylong.h
