# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
SUBDIRS = quatalg letterplace
include $(top_srcdir)/common.mk
algebrasdir = $(pythondir)/sage/algebras
algebras_PYTHON = \
    affine_nil_temperley_lieb.py algebra_element.py algebra.py all.py \
    free_algebra_element.py free_algebra.py free_algebra_quotient_element.py \
    free_algebra_quotient.py group_algebra_new.py group_algebra.py __init__.py \
    iwahori_hecke_algebra.py nil_coxeter_algebra.py quaternion_algebra_element.py \
    quaternion_algebra.py shuffle_algebra.py

algebras_steenroddir = $(pythondir)/sage/algebras/steenrod
algebras_steenrod_PYTHON = \
    steenrod/all.py \
    steenrod/__init__.py \
    steenrod/steenrod_algebra_bases.py \
    steenrod/steenrod_algebra_misc.py \
    steenrod/steenrod_algebra_mult.py \
    steenrod/steenrod_algebra.py
